--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "http-server": "^0.11.1"
   },
   "dependencies": {
-    "d3": "^5.1.0"
+    "d3": "^5.1.0",
+    "lodash": "^4.17.10"
   }
 }
